fixed con z-index

--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,6 @@ body{
     background-color: var(--color-bg-main);
     color: var(--color-text);
 }
-.bordo{
-    border: 1px solid red ;
-}
-.bordo-b{
-    border: 1px solid blue;
-}
-.bordo-g{
-    border: 1px solid rgb(0, 255, 26);
-}
-.bordo-y{
-    border: 1px solid rgb(195, 255, 0);
-}
-.bordo-v{
-    border: 1px solid rgb(203, 24, 183);
-}
 .d-flex{
     display: flex;
 }
@@ -158,6 +143,7 @@ main{
     background-color: rgba(25, 24, 24, 0.4);
     text-align: end;
     position: fixed;
+    z-index: 999;
     top: 0;
     padding: 20px 25px;
 }
